--- a/configs/analyze.yaml
+++ b/configs/analyze.yaml
@@ -1,23 +1,18 @@
 settings:
- filter_time_intervals: 10
+ filter_time_intervals: 5
  fps: 15
  interval_unit: minutes
- time_intervals: 1
+ time_intervals: 0.5
  use_track_id: true
  stat: sum
+ treatment_or_rep: treatment
 
-average_visits:
+visits:
   filter_time_intervals: 10
   fps: 15
   interval_unit: minutes
   time_intervals: 1
   use_track_id: true
-
-duration:
-  fps: 15
-
-distance_traveled:
-  # No specific settings needed yet, but can be extended
 
 heatmap:
   grid_size: 30
@@ -26,16 +21,16 @@ heatmap:
   true_axis: true
 
 input_csv: /home/bohbot/workspace/project/Dborneol/all_crop/merged_filtered_data.csv
-output_dir: /home/bohbot/workspace/project/23.04/claude
-
+output_dir: /home/bohbot/workspace/project/19.05
+save_csv: true
 plotxy:
   id_OR_class: track_id
   treatment_or_rep: treatment
   true_axis: true
 
 task:
-  average_visits: true
+  visits: true
   duration: true  # Enabled
   distance: true  # Added new task
   heatmap: false
-  plotxy: false
+  plotxy: true
