--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-numpy==1.26.4
+numpy
 pandas
-matplotlib==3.9.2
-seaborn==0.13.2
-scipy==1.14.1
-scikit-learn==1.5.2
+matplotlib
+seaborn
+scipy
+scikit-learn
 plotnine
-plotly==5.24.1
-tqdm==4.66.5
-opencv-python==4.11.0.86
-Pillow==11.1.0
-pyyaml==6.0.1
-torch==2.4.1
-torchvision==0.19.1
-ultralytics==8.3.65
-pytorch-lightning==2.4.0
-sahi==0.11.20
-optuna==4.0.0
-umap-learn==0.5.7
+plotly
+tqdm
+opencv-python
+Pillow
+pyyaml
+ultralytics
+sahi
+umap-learn
+filterpy
+pytest
