--- a/configs/infer.yaml
+++ b/configs/infer.yaml
@@ -1,13 +1,13 @@
-images_dir: /home/bohbot/workspace/projects/Arad/data/raw_data
+images_dir: /home/bohbot/Evyatar/runs/vids/IMG_9042.MOV
 
 model:
   conf_threshold: 0.2
   iou_threshold: 0.5
-  task: track
+  task: slice
   vid_stride: 2
   weights: /home/bohbot/Evyatar/runs/detect/1000_each/weights/last.pt
 
-output_dir: /home/bohbot/workspace/projects/arad/r
+output_dir: /home/bohbot/workspace/projects/test_sahi
 
 sahi:
   overlap_ratio: 0.1
